add new scenario

--- a/design/Sequence.html
+++ b/design/Sequence.html
@@ -44,9 +44,20 @@
                 </ul>
             </li>
 
-            <li>Use Case 5</li>
-            <li>Use Case 6</li>
-            <li>Use Case 7</li>
+            <li>
+                Use Case 5
+                <ul>
+                    <li><a href="#scenario5A">Scenario 5A</a></li>
+                </ul>
+            </li>
+            <li>Use Case 6 (not used)</li>
+            <li>
+                Use Case 7
+                <ul>
+                    <li><a href="#scenario7A">Scenario7A</a></li>
+                    <li><a href="#scenario7B">Scenario7B</a></li>
+                </ul>
+            </li>
             <li>Use Case 8</li>
             <li>
                 Use Case 9
