--- a/design/Sequence.html
+++ b/design/Sequence.html
@@ -122,8 +122,8 @@
             <h2>Use Case 3: Press button to take photo from iris</h2>
             <a name="scenario3A">
                 <h3>Scenario 3A: Iris mode is opened</h3>
-                <h4>Pre-Conditions:</h4> Press button and take photo from iris
-                <h4>Scenario:</h4> Recognize  person
+                <h4>Pre-Conditions:</h4> Iris reading mode is opened
+                <h4>Scenario:</h4> Press button and take photo from iris
                 <h4>Post-Conditions:</h4> The photo of iris is taken from camera
                 <h4>Sequence Diagram:</h4>
                 <img src="Scenario_Bmp/Scenerio 3A.bmp" alt="Scenerio" />
